working code after lab 2

--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,8 @@ laboratorium1/Debug/wektor2d.obj
 laboratorium1/laboratorium1.vcxproj
 laboratorium1/laboratorium1.vcxproj.filters
 laboratorium1/laboratorium1.vcxproj.user
+.vs/laboratorium1/v16/ipch/AutoPCH/6cef061a649aed3/POJEMNIK.ipch
+.vs/laboratorium1/v16/ipch/AutoPCH/970e7c4df4b7ab91/MAIN.ipch
+.vs/laboratorium1/v16/ipch/AutoPCH/e2a777d0bbd00b49/MAIN.ipch
+.vs/laboratorium1/v16/ipch/AutoPCH/eeb243bfff3b8c21/MAIN.ipch
+.vs/laboratorium1/v16/ipch/AutoPCH/fd247c71624009f8/POJEMNIK.ipch
