--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,4 @@ laboratorium1/laboratorium1.vcxproj.user
 .vs/laboratorium1/v16/ipch/AutoPCH/e2a777d0bbd00b49/MAIN.ipch
 .vs/laboratorium1/v16/ipch/AutoPCH/eeb243bfff3b8c21/MAIN.ipch
 .vs/laboratorium1/v16/ipch/AutoPCH/fd247c71624009f8/POJEMNIK.ipch
+projekt/schemat.graphml
